Sent to co-authors

--- a/Scripts/Supplements.Rmd
+++ b/Scripts/Supplements.Rmd
@@ -32,13 +32,13 @@ packages <- c(
 my_lib(packages)
 ```
 
-**Materials and methods**
+# Materials and methods
 
-_**Databases and species selection**_
+### Databases and species selection
 
 The analyses detailed herein are based on 633 exploited marine transboundary species that account for 80% of the catch taken from the world’s EEZs between 2005 and 2014 [@PalaciosAbrantes:2020tv]. When a species was shared by a pair of neighboring EEZs it was considered a transboundary stock [@PalaciosAbrantes:2020tv; @Teh:2015gd], resulting in a total of 9,132 transboundary stocks. Using the transboundary species Atlantic cod (*Gadus morhua*) as an example and this study’s definition of transboundary stock, the United States and Canada share a stock of Atlantic cod, and Canada and Greenland share a separate stock of Atlantic cod, but the United States and Greenland do not as they do not have juxtaposing EEZs. We defined the boundaries of the world’s EEZs using the Sea Around Us spatial division (updated 1 July 2015; http://www.seaaroundus.org), noting that it subdivides the EEZs of 198 coastal states into 280 regions (Fig. \@ref(fig:toeFigureS5)) including island territories. We determined the intersections between polygons using the R package sf [@PackagesfSimpleF:2018vp]. Each EEZ was categorized by geopolitical region according to the United Nations (https://population.un.org/wpp/DefinitionOfRegions/) and biome [@Reygondeau:2019uh]. The habitat preference of each species was determined following FishBase (http://www.fishbase.org) for fish species and SeaLifeBase (http://www.fishbase.org) for invertebrates (Table S\@ref(tab:toeTableS1)). For each stock and EEZ, we used Sea Around Us data to estimate catch and fishing revenue from fishing activities. We report both average catch and revenue for the last available decade (2005-2014) [@Zeller2016; @Tai2017; @Sumaila:2015uc].
 
-_**Projecting species distributions under climate change**_
+### Projecting species distributions under climate change
 
 We projected the future distribution of transboundary stocks using a dynamic bioclimatic envelope model (hereafter called DBEM). The DBEM determines the environmental space a species will occupy based on physiology, habitat suitability, depth and latitudinal ranges, and spatial population dynamics as well as preferences for sea temperature, salinity, oxygen content, sea ice extent (for polar species) and bathymetry. The DBEM then estimates species’ abundance and maximum catch potential (a proxy for maximum sustainable yield) over a regular spatial grid of 0.5 of latitude per 0.5 of longitude. Below we provide an overall description of the model. Please see @Cheung:2010dt; @Cheung:2009ud; @Cheung:2016jd for a more detailed version. Importantly, the DBEM is able to project catches by Exclusive Economic Zones that are consistent with observational-based estimates of catch from 1950 to 2016 [@Cheung:2016jd, Cheung et al. *in revision*].
 
@@ -70,7 +70,7 @@ Finally, the DBEM projects maximum catch potential by setting fishing mortality 
 
 The DBEM was driven by simulated ocean conditions from a ten ensemble member simulation of the Geophysical Fluid Dynamics Laboratory Earth system model (GFDL-ESM2M) to project the distributions of the 633 species from 1951 to 2100 [@Dunne:2012bo; @Dunne:2013db; @Rodgers:2015jq]. The GFDL-ESM2M was run under historical forcing until 2005 and follows a high greenhouse gas emissions scenario, Representative Concentration Pathway 8.5 (RCP 8.5), over the 2006-2100 period [@Riahi:2011dk]. We chose the 1951-2100 time period to match the historical period in the GFDL ESM2M simulations over which the model was forced with observation-based greenhouse gas, aerosol and natural external forcing [@Rodgers:2015jq]. Because the main approach of this paper relies on understanding the spatial and temporal variation of a stock’s distribution, we have to understand distribution variability during both historical and future periods, to infer differences between time frames. To this end, each of the ten GFDL-ESM2M ensembles were started from infinitesimally small differences in Earth system initial conditions in 1950, resulting in a unique atmosphere and ocean state at each point in time after about three years for surface and eight years for subsurface waters [@Frolicher:2020cc]. By design, variations among ensemble members are then solely due to natural internal variability (e.g., different phases of the El Niño Southern Oscillation-ENSO). Thus, for our experiment, each of the ten GFDL-ESM2M ensemble simulations were started from infinitesimally small differences in Earth system initial conditions in the year 1950, resulting in a unique atmosphere and ocean state at each point in time after about three years for surface waters and eight years for subsurface waters [@Frolicher:2020cc].
 
-_**Calculating an index of transboundary range shift**_
+### Calculating an index of transboundary range shift
 
 We developed a Transboundary Index (TI) to evaluate range shifts in the shared distribution of transboundary stocks under climate change. This index represents the shift in the distribution centroid of a transboundary stock relative to the centroid of neighboring EEZs that share this stock (Fig. \@ref(fig:toeFigure1)). The centroid of a transboundary stock was determined by the average ($\mu$) latitude ($lat_{ts}$) and longitude ($lon_{ts}$) across grid cells within the neighboring EEZs sharing the stock. Therefore,
 
@@ -102,7 +102,7 @@ where $D_A$ and $D_B$ represent the distance between the distribution centroids 
 <!-- Removed in response to reviewer 3 -->
 <!-- Thus, a higher TI means that the abundance of a transboundary stock within neighboring EEZs changes beyond historical levels. From the perspective of a state’s fisheries, increasing TI indicates an increase in the challenges to effective management and sustainability of the transboundary stock’s fisheries. In contrast, a decreasing TI suggests that the sharing of the stocks between neighboring EEZs is becoming relatively more stable; a condition that favors effective management and sustainability of the related fisheries. -->
 
-_**Calculating shifts in the shared distribution of transboundary stocks**_
+### Calculating shifts in the shared distribution of transboundary stocks
 
 Knowing the point in time at which the distribution of a shared stock will diverge from historical variability is important to inform decision makers by when, ideally, climate adaptation plans will need to have been implemented [@Link:2010ei]. To that end, we adopted the concept of time of emergence, commonly applied to multiple oceanic physical and biogeochemical variables [@Rodgers:2015jq; @Keller:2014jv; @Cheung:2020ja; @Schlunegger:2020gz; @Schlunegger:2019el; @Henson:2017ev] and defined as the moment in time when a signal (e.g., future anthropogenic trend) emerges from the background noise of natural variability (i.e., historical natural variation) [@Hawkins:2012hc]. The premise behind time of emergence is that we can only be confident that a significant change has been detected when the signal of anthropogenic climate change is larger than the background noise of natural climate variability [@Hawkins:2012hc]. The TI’s natural internal variability was estimated from the ensemble members by firstly averaging the TI from 1951 to 2005 and then estimating the variation ($TI_\sigma$) across ensemble members. The TI signal represents the average TI across ensemble members from 2006 to 2100 ($TI_\mu$). We then set a threshold (*tresh*) of $TI_\sigma$ to define the time of emergence of transboundary stocks (See Fig. \@ref(fig:toeFigure1) for a graphical description):
 
@@ -123,11 +123,11 @@ Since the ToE method is sensitive to the noise estimate (i.e., historical natura
 
 <!-- In this case, the global average shift in the shared distribution of transboundary stocks by 2029 $\pm$ 27 years, a difference of about 7 years (Fig. \@ref(fig:toeFigureS8)). In total, 5,745 transboundary stocks would shift their shared distributions between 2006 and 2100 considering a less conservative metric, that is, 33% (n = 1626) more shifting stocks (Figs. \@ref(fig:toeFigureS2) and \@ref(fig:toeFigureS8)). -->
 
-_**Quantifying the intensity of transboundary stocks’ range shift**_
+### Quantifying the intensity of transboundary stocks’ range shift
 
 Here, we adopt the concept of threat point to quantify the intensity of changes in the shared distribution of transboundary stocks between neighboring EEZs. The concept of threat point comes from Game Theory and has been widely used in shared fisheries management [@Bailey:2010ga; @Sumaila:2013hv; @Sumaila:2020tp; @Clark:1975uu; @Munro:1979dg]. In a game theoretic model, a player’s strategy (e.g., to act cooperatively or not) will have direct consequences for other players, which, in turn, will affect the overall outcome of the game [@Bailey:2010ga]. Cooperation will often result in the maximization of benefits for the system rather than for individual players. However, for a cooperative strategy to work, the benefit a player gets must not be less than the benefit under a non-cooperative strategy. Thus, the “threat point” is defined as the minimum payoff a player is willing to receive to cooperate in a game-theoretic model [@Nash:1953vr]. We define the threat point as the minimum required catch proportion of a transboundary stock within an EEZ for a country to engage in cooperative management with their sharing neighbor [@PalaciosAbrantes:2020vt; @Sumaila:2020tp]. Any proportion below the defined threat point would result in the unilateral management of the stock assuming that no country will be willing to engage in cooperative management if the future catch proportion of the transboundary stock is lower than it has ever been.
 
-First, we estimated **the catch proportion as the** stock share ratio (SSR) catch of each transboundary stock shared by neighboring nations between 1951 and 2100. We did this by aggregating the projected catch within the $0.5^{\circ}$ x $0.5^{\circ}$ grid cells in which the stock is present across neighboring EEZs, and then calculated the proportion of the stock's catch held within each EEZ [@PalaciosAbrantes:2020tv]. Second, to reduce the effects of variability, we averaged the calculated proportion of stock occupying a given EEZ into three time periods: the historical time period ($SSR_{th}$) from 1951 to 2005, and two future periods, the early $21^{st}$ century, between 2021 and 2040 ($SSR_{te}$), and the mid $21^{st}$ century, defined as the average of 2041 to 2060 ($SSR_{tm}$). These future time periods were chosen to correspond to the challenges of achieving fisheries-relevant UN-SDGs by 2030 (i.e., the 2030 Agenda), such as SDG 14.4 (end overfishing), SDG 2.4 (ensure sustainable food production systems) and SDG 1.2 (poverty reduction) [@Singh:2017ds; @UnitedNations:1Qe8KIcN]. The analysis was replicated for projected stock distributions from each of the ten ensemble members and results were averaged across ensemble members. Third, we defined a threat point for each EEZ’s stock as $SSR_{th} \pm 2 \sigma$, where  is the standard deviation of $SSR_{th}$. Thus, a change of SSR catch beyond an EEZ’s threat point happens when the future SSR catch exceeds two standard deviations of the historical variations in SSR (i.e., when $SSR_{et} \geqq (SSR_{th} + 2 \sigma$) or $SSR_{e,m} \leqq (SSR_{th} - \sigma)$. Finally, we estimated the percentage change in SSR ($\Delta SSR$) of each future time period ($SSR_{tf}$) relative to the historic time period $SSR_{th}$ for each stock whose share ratio exceeded the threat point following [@PalaciosAbrantes:2020tv];
+First, we estimated the catch proportion as the stock share ratio (SSR) catch of each transboundary stock shared by neighboring nations between 1951 and 2100. We did this by aggregating the projected catch within the $0.5^{\circ}$ x $0.5^{\circ}$ grid cells in which the stock is present across neighboring EEZs, and then calculated the proportion of the stock's catch held within each EEZ [@PalaciosAbrantes:2020tv]. Second, to reduce the effects of variability, we averaged the calculated proportion of stock occupying a given EEZ into three time periods: the historical time period ($SSR_{th}$) from 1951 to 2005, and two future periods, the early $21^{st}$ century, between 2021 and 2040 ($SSR_{te}$), and the mid $21^{st}$ century, defined as the average of 2041 to 2060 ($SSR_{tm}$). These future time periods were chosen to correspond to the challenges of achieving fisheries-relevant UN-SDGs by 2030 (i.e., the 2030 Agenda), such as SDG 14.4 (end overfishing), SDG 2.4 (ensure sustainable food production systems) and SDG 1.2 (poverty reduction) [@Singh:2017ds; @UnitedNations:1Qe8KIcN]. The analysis was replicated for projected stock distributions from each of the ten ensemble members and results were averaged across ensemble members. Third, we defined a threat point for each EEZ’s stock as $SSR_{th} \pm 2 \sigma$, where  is the standard deviation of $SSR_{th}$. Thus, a change of SSR catch beyond an EEZ’s threat point happens when the future SSR catch exceeds two standard deviations of the historical variations in SSR (i.e., when $SSR_{et} \geqq (SSR_{th} + 2 \sigma$) or $SSR_{e,m} \leqq (SSR_{th} - \sigma)$. Finally, we estimated the percentage change in SSR ($\Delta SSR$) of each future time period ($SSR_{tf}$) relative to the historic time period $SSR_{th}$ for each stock whose share ratio exceeded the threat point following [@PalaciosAbrantes:2020tv];
 
 <!-- $$ \Delta{SSR_{e,m}} = \frac{(SSR_{f}-SSR_{th})}{SSR_{th}}* 100 $$ -->
 
@@ -136,14 +136,14 @@ First, we estimated **the catch proportion as the** stock share ratio (SSR) catc
 \Delta{SSR_{e,s}} = \frac{(SSR_{f}-SSR_{th})}{SSR_{th}}* 100
 \end{equation}
 
-_**Statistical analysis**_
+### Statistical analysis
 
-We tested the results for normality (e.g., skewness, kurtosis) and performed two non-parametric Kruskal–Wallis tests by ranks [@Hollander:2013wz]  to investigate geopolitical and ecological differences in the range shift of transboundary species. Specifically, we tested if the habitat preference of transboundary species and the geographic location of EEZs would have any effect on the transboundary stocks distributional range shift. In both cases, our null hypothesis was that there were no significant differences in the year of shift across habitat association or EEZs. All analyses were run using the statistical software R version 3.5.2 (2018-12-20; Eggshell Igloo) with the packages cowplot [@CowplotStreamlined:2019wt], data.table [@Packagedatatable:2019uh], geosphere [@], ggrepel [@PackageggrepelAut:2020to], gmt [@PackagegmtInterfa:2017vh], janitor [@PackagejanitorSim:2018ur], moments [@PackagemomensMome:2015uh], pgirmess [@PackagepgirmessSp:2018um], rfishbase [@PackagerfishbaseR:2019th], sf [@PackagesfSimpleF:2018vp], sp [@PackagespClasses:2019tn], tidiverse [@PackagetidyverseE:2017vq], tidytext [@PackagetidytextTe:2019vk], viridis [@PackageviridisDef:2018us], zeallot [@PackagezeallotMul:2018wy], and zoo [@PackagezooSInfr:2019tm]. Code for all analyses is available at https://github.com/jepa/TransEmergence
+We tested the results for normality (e.g., skewness, kurtosis) and performed two non-parametric Kruskal–Wallis tests by ranks [@Hollander:2013wz]  to investigate geopolitical and ecological differences in the range shift of transboundary species. Specifically, we tested if the habitat preference of transboundary species and the geographic location of EEZs would have any effect on the transboundary stocks distributional range shift. In both cases, our null hypothesis was that there were no significant differences in the year of shift across habitat association or EEZs. All analyses were run using the statistical software R version 3.5.2 (2018-12-20; Eggshell Igloo) with the packages cowplot [@CowplotStreamlined:2019wt], data.table [@Packagedatatable:2019uh], geosphere [@], ggrepel [@PackageggrepelAut:2020to], gmt [@PackagegmtInterfa:2017vh], janitor [@PackagejanitorSim:2018ur], moments [@PackagemomensMome:2015uh], pgirmess [@PackagepgirmessSp:2018um], rfishbase [@PackagerfishbaseR:2019th], sf [@PackagesfSimpleF:2018vp], sp [@PackagespClasses:2019tn], tidiverse [@PackagetidyverseE:2017vq], tidytext [@PackagetidytextTe:2019vk], viridis [@PackageviridisDef:2018us], zeallot [@PackagezeallotMul:2018wy], and zoo [@PackagezooSInfr:2019tm]. Code for all analyses is available at https://github.com/jepa/EmergingFish
 
 
 \clearpage
 
-_**Figures**_
+# Supplemental Figures
 
 ```{r toeFigureS1, eval = T,  echo = F, fig.width=9, fig.height=7,fig.pos= "H", fig.cap =  "Comparison of shifts in the shared distribution of transboundary stocks by species’ habitat association. Classification is based on the habitat preference information obtained from FishBase and SeaLifeBase (see Table S1). The category “Other” consists of species that have no “habitat preference” classification. The number of stocks included in this analysis for each habitat type is noted in parentheses. Dashed whiskers represent the 1.5* interquartile range. Box represents interquartile range as distance between first and third quartiles. Solid line represents the median time of emergence per habitat preference."}
 
